--- a/source/Tutorial 1_Encoding histology image features using H-ViT.ipynb
+++ b/source/Tutorial 1_Encoding histology image features using H-ViT.ipynb
@@ -13,7 +13,7 @@
    "id": "08ea17b8",
    "metadata": {},
    "source": [
-    "This tutorial shows how to apply ViT to extract the latent representation of each spot image. Here we take the slice 151674 of the DLPFC dataset as example. The histology image is available at https://github.com/LieberInstitute/spatialLIBD.\n",
+    "This tutorial shows how to apply H-ViT to extract the latent representation of each spot image. Here we take the slice 151674 of the DLPFC dataset as example. The histology image is available at https://github.com/LieberInstitute/spatialLIBD.\n",
     "To reduce your waiting time, we upload obtained histological image representation data to https://zenodo.org/record/8137326/files/DLPFC.rar?download=1."
    ]
   },
@@ -36,8 +36,6 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "\n",
     "import pandas as pd\n",
     "import os\n",
     "from stGCL.image_processing import image_representation\n",
@@ -57,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed=0\n",
-    "set_seed(seed)\n",
-    "section_id=\"151674\"\n",
+    "# seed=0\n",
+    "# set_seed(seed)\n",
+    "section_id=\"151676\"\n",
     "pca_num = 3000"
    ]
   },
@@ -97,7 +95,7 @@
    "source": [
     "scale_file=\"/home/dell/stproject/stGCL/Data/DLPFC/{}/spatial/scalefactors_json.json\".format(section_id)\n",
     "image_adress=\"/home/dell/stproject/stGCL/Data/DLPFC/{}/spatial\".format(section_id)\n",
-    "score_adress=\"/home/dell/stproject/stGCL/Data/DLPFC/{}/image_representation/\".format(section_id)\n",
+    "score_adress=\"/home/dell/stproject/stGCL/image_representation/\".format(section_id)\n",
     "image_file=\"tissue_hires_image.png\""
    ]
   },
@@ -113,7 +111,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "99d03109",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +129,7 @@
      "output_type": "stream",
      "text": [
       "Tiling image: 100%|████████████████████████████████████████████████████████████████████████████████ [ time left: 00:00 ]\n",
-      "extract representation by ViT: 100%|████████████████████████████████████████████████████| 29/29 [00:11<00:00,  2.57it/s]\n"
+      "extract representation by ViT: 100%|████████████████████████████████████████████████████| 28/28 [00:09<00:00,  2.98it/s]\n"
      ]
     },
     {
@@ -135,7 +137,8 @@
      "output_type": "stream",
      "text": [
       "PCA dimensionality reduction\n",
-      "/home/dell/stproject/stGCL/Data/151674/image_representation//ViT_representation.csv\n",
+      "Image features are stored in:  /home/dell/stproject/stGCL/image_representation//ViT_representation.csv\n",
+      "PCA Image features are stored in:  /home/dell/stproject/stGCL/image_representation//ViT_pca_representation.csv\n",
       "Complete the extraction of image representation\n"
      ]
     }
@@ -144,14 +147,6 @@
     "image_representation(positionsdata,image_adress,image_file,label,score_adress,pca_num=3000,k=7,scale_file=scale_file,\n",
     "                     image_net=\"ViT\",image_type=\"hires\",crop_size=256,patch_size=64,load=False,batch_size_lw=128)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b9ccc4b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
